Correct form alignment

--- a/app/assets/stylesheets/rsvp.css
+++ b/app/assets/stylesheets/rsvp.css
@@ -1,11 +1,12 @@
 
 
+
 .rsvp-form {
   max-width: 40%;
   width: 100%;
   margin: auto;
-  text-align: left;
-  
+  text-align: center;
+
 }
 
 .actions {
